@@ -1,3 +1,4 @@
+2018-01-18 Fixed events in LearnPen Data module
 2018-01-17 Fixed player start with subset of pages from exported lesson.
 2018-01-17 Fixed reading data in LearnPen Report module
 2018-01-15 Added time labels property for video addon.
